fix spacing

--- a/themes/repair-cafe/assets/sass/components/_footer-content.scss
+++ b/themes/repair-cafe/assets/sass/components/_footer-content.scss
@@ -12,6 +12,10 @@
         }
     }
 
+    .footer-content-box > *:last-child {
+        margin-bottom: 0;
+    }
+
     .social-links a .fa-inverse {
         color: $gray;
     }
