--- a/themes/repair-cafe/assets/sass/components/_footer-newsletter.scss
+++ b/themes/repair-cafe/assets/sass/components/_footer-newsletter.scss
@@ -1,6 +1,6 @@
 .footer-newsletter {
     background-color: $gray-dark;
     padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
     color: $white;
 }
